[package]
name = "dds-cdr"
version = "0.1.0"
edition = "2021"
description = "CDR/XCDR/XCDR2 serialization for DDS"
license = "MIT OR Apache-2.0"

[dependencies]
dds-types = { workspace = true }
bytes = { workspace = true }
byteorder = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
