[package]
name = "dds-core"
version = "0.1.0"
edition = "2021"
description = "DDS DCPS 1.4 API — DomainParticipant, Topic, Publisher, Subscriber, DataWriter, DataReader"
license = "MIT OR Apache-2.0"

[dependencies]
dds-types = { workspace = true }
dds-cdr = { workspace = true }
dds-rtps = { workspace = true }
dds-discovery = { workspace = true }
dds-xtypes = { workspace = true }
dds-security = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }


[lints]
workspace = true
