[package]
name = "dds-monitor"
version = "0.1.0"
edition = "2021"
description = "egui-based DDS monitoring and debugging GUI"
license = "MIT OR Apache-2.0"

[[bin]]
name = "dds-monitor"
path = "src/main.rs"

[dependencies]
dds-types = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
