[package]
name = "dds-xtypes"
version = "0.1.0"
edition = "2021"
description = "DDS XTypes 1.3 — Type system, TypeObject, TypeIdentifier"
license = "MIT OR Apache-2.0"

[dependencies]
dds-types = { workspace = true }
dds-cdr = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
